# theta_guard

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  streamlit_app.py
src/theta_guard/: .env.example  __init__.py  run_week.py
src/theta_guard/backtest/: __init__.py  evaluator.py
src/theta_guard/calendar/: __init__.py  holiday_gate.py
src/theta_guard/charter/: __init__.py  trading_charter.md
src/theta_guard/execution/: __init__.py  quality_checks.py  slippage_model.py
src/theta_guard/indicators/: __init__.py  ema_engine.py
src/theta_guard/journal/: __init__.py  weekly_journal.py
src/theta_guard/live/: __init__.py  env_guard.py  paper_runner.py
src/theta_guard/research/: __init__.py  event_calendar.py  historical_options_outcomes.py  historical_validation.py
src/theta_guard/risk/: __init__.py  gamma_warning.py  position_sizing.py
src/theta_guard/signals/: __init__.py  confidence_score.py  entry_evaluator.py
src/theta_guard/strategies/: __init__.py  bwb_builder.py
tests/: __init__.py
